<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.abhilashmishra.myappportfolio.MyAppPortfolio">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/portfolio_heading"
            android:id="@+id/textView"/>

        <LinearLayout
            android:id="@+id/buttonCarrier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spotify_streamer"
                android:id="@+id/spotify_streamer"
                style="@style/MyButtonStyleCommon"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scores_app"
                android:id="@+id/scores_App"
                style="@style/MyButtonStyleCommon"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/library_app"
                android:id="@+id/library_app"
                style="@style/MyButtonStyleCommon"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/build_it_bigger"
                android:id="@+id/build_it_bigger"
                style="@style/MyButtonStyleCommon"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/xyz_reader"
                android:id="@+id/xyz_reader"
                style="@style/MyButtonStyleCommon"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/capstone"
                android:id="@+id/capstone"
                style="@style/MyButtonStyleSpecial"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>
